k8s/manifests/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  type: LoadBalancer
  selector:
    app: seerr
  ports:
    - port: 5055
      targetPort: 5055
